# claw-mem

./: .audit_log.jsonl  .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GIT_COMMIT_RULES.md  MEMORY.md  MIGRATION_COMPLETE_REPORT.md  NOTICE  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_REPORT.md  PHASE1_PROGRESS_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.5.md  RELEASE_NOTES_v1.0.7.md  RELEASE_NOTES_v2.0.0-rc.2.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.2.0.md  REVIEW_v2.0.0.md  SKILL.md  bridge.py  demo_simple.py  demo_v103_final.py  demo_v103_online.py  demo_v103_simple.py  demo_v104_final.py  demo_v2.1.0.py  demo_verification.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_installation.py
.checkpoints/: test-session-1_20260430_133147.json  test-session-1_20260430_191825.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUES/: bug_display_100_percent.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.helix/checkpoints/: 20260423-104509.json  20260423-110857.json  20260423-112725.json  20260423-143052.json  20260423-144322.json  20260423-151613.json  20260423-153600.json  20260423-163048.json  20260423-165301.json  20260423-170233.json  20260423-172349.json  20260424-231913.json
.mypy_cache/3.9/: cache.db
archive/v1.0.x/: test_performance.py  test_v060.py  test_v070_comprehensive.py  test_v103_semantic.py
benchmarks/: README.md
claude-code-plugin/: .claude-plugin  package-lock.json  package.json  test-plugin.mjs  test.mjs  test_cli.py
claw_mem/: bridge.py
claw_mem_plugin/: .npmignore  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
core/: pre_action_check.py
docs/: APACHE_2.0_CONFIGURATION_GUIDE.md  BUSINESS_AGENT_REPORT_v100.md  CODE_REVIEW_v090.md  COMPARISON_v080_vs_v090.md  COMPETITOR_ANALYSIS.md  DAY1_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_TO_LOCAL.md  ERROR_CODES.md  ERROR_CODES_v090.md  F000_MEMORY_FIX_PLAN.md  F1_IMPLEMENTATION.md  F2_LAZY_LOADING.md  F5_COMPRESSION.md  F6_RECOVERY.md  F7_PERFORMANCE_TEST.md  FEATURES_v080.md  FINAL_RELEASE_REPORT_v080.md  GITHUB_RELEASE_NOTES_v090.md  GITHUB_RELEASE_NOTES_v100.md  IMPORTANCE_SCORING_GUIDE.md  OPENCLAW_322_CLAW_MEM_COMPATIBILITY_REPORT.md  P0_DEVELOPMENT_PLAN.md  PAPER_ANALYSIS_10_SECURITY.md  PAPER_ANALYSIS_5_FUNDAMENTALS.md  PAPER_ANALYSIS_6_SURVEY.md  PAPER_ANALYSIS_7_MECHANISMS_SURVEY.md  PAPER_ANALYSIS_9_LMEB.md  PRE_RELEASE_REVIEW_v090.md  README.md  RELEASE_CHECKLIST_v080.md  RELEASE_CHECKLIST_v090.md  RELEASE_COMPLETE_v090.md  RELEASE_GUIDELINES.md  RELEASE_NOTES_v070.md  RELEASE_NOTES_v080.md  RELEASE_NOTES_v090_DRAFT.md  RELEASE_NOTES_v100.md  RELEASE_NOTES_v101.md  RELEASE_PLAN_v070.md  (+16 more)
htmlcov/: bridge_py.html  class_index.html  demo_v103_final_py.html  demo_v103_online_py.html  demo_v103_simple_py.html  demo_v104_final_py.html  demo_verification_py.html  function_index.html  index.html  status.json  z_5b7f1af5164f8ecf_bm25_retriever_py.html  z_5b7f1af5164f8ecf_enhanced_smart_retriever_py.html  z_5b7f1af5164f8ecf_entity_retriever_py.html  z_5b7f1af5164f8ecf_heuristic_retriever_py.html  z_5b7f1af5164f8ecf_keyword_py.html  z_5b7f1af5164f8ecf_optimized_py.html  z_5b7f1af5164f8ecf_preference_detector_py.html  z_5b7f1af5164f8ecf_three_tier_py.html  z_5b7f1af5164f8ecf_time_parser_py.html  z_6a8115fa2824d8e8_chunked_index_py.html  z_6a8115fa2824d8e8_episodic_py.html  z_6a8115fa2824d8e8_index_py.html  z_6a8115fa2824d8e8_procedural_py.html  z_6a8115fa2824d8e8_semantic_py.html  z_744bc8e86f069cfe_memory_links_py.html  z_9f010202dbdeb063_atomic_writer_py.html  z_9f010202dbdeb063_attention_index_py.html  z_9f010202dbdeb063_attention_node_py.html  z_9f010202dbdeb063_backup_py.html  z_9f010202dbdeb063_bridge_py.html  z_9f010202dbdeb063_cli_py.html  z_9f010202dbdeb063_config_manager_py.html  z_9f010202dbdeb063_config_py.html  z_9f010202dbdeb063_context_assembler_py.html  z_9f010202dbdeb063_context_injection_py.html  z_9f010202dbdeb063_context_manager_py.html  z_9f010202dbdeb063_data_portability_py.html  z_9f010202dbdeb063_errors_py.html  z_9f010202dbdeb063_health_checker_py.html  z_9f010202dbdeb063_importance_py.html  (+15 more)
memory/: 2026-03-31.md
prototype/: PHASE0_PERFORMANCE_REPORT.md  bridge_client_prototype.ts  bridge_prototype.py  run_test.sh  simple_test.js
scripts/: add_license_headers.py  benchmark_performance.py  compare_versions.py  deploy_to_local.sh  pre_release_test.sh  test_chunked_fast.py  test_config_manager.py  test_health_checker.py  test_recovery.py  translate_docs.py  upgrade_to_v060.sh  verify_chunked_index.py  verify_performance.py
skill/: SKILL.md
test-foo/: .gitignore  README.md  devclaw.json
tests/: INTEGRATION_TEST_PLAN.md  TEST_REPORT_v060.md  compare_v050_v060.py  run_integration_tests.py  test_adapters.py  test_atomic_writer.py  test_benchmarks.py  test_bm25_retriever.py  test_config_extended.py  test_config_manager_extended.py  test_consolidation.py  test_context_injection.py  test_context_injection_extended.py  test_context_manager.py  test_data_portability.py  test_enhanced_smart_retriever.py  test_entity_retriever.py  test_episodic_storage.py  test_errors.py  test_f1_persistence.py  test_f2_lazy_loading.py  test_f5_compression.py  test_f6_recovery.py  test_feedback_handler.py  test_heuristic_retriever.py  test_importance_extended.py  test_integration_v090.py  test_knowledge_graph.py  test_memory_decay_extended.py  test_memory_fix_plugin.py  test_memory_manager.py  test_memory_manager_extended.py  test_memory_manager_graph.py  test_memory_manager_v290.py  test_optimized_retriever.py  test_preference_detector.py  test_procedural_storage.py  test_recovery.py  test_recovery_extended.py  test_reflection.py  (+21 more)
workspace/: .audit_log.jsonl  MEMORY.md
workspace-test/: .audit_log.jsonl  MEMORY.md
workspace_test2/: .audit_log.jsonl
workspace_test3/: .audit_log.jsonl
(+317 files in other folders)
