[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-mem"
version = "2.6.1"
description = "Intelligent Memory System for AI Agents with Write-Time Gating and Concept-Mediated Graph"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Peter Cheng"}
]
keywords = [
    "memory",
    "ai",
    "llm",
    "agent",
    "openclaw",
    "harness-engineering",
    "context-engineering",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "rank-bm25>=0.2.2",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark",
    "pytest-cov>=3.0.0",
]
zh = [
    "jieba>=0.42.1",
]

[project.urls]
Homepage = "https://github.com/opensourceclaw/claw-mem"
Documentation = "https://github.com/opensourceclaw/claw-mem/tree/main/docs"
Repository = "https://github.com/opensourceclaw/claw-mem/claw-mem.git"
Changelog = "https://github.com/opensourceclaw/claw-mem/blob/main/CHANGELOG.md"

[project.scripts]
claw-mem = "claw_mem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
ignore = [
    "E203",
    "W503",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=claw_mem",
    "--cov-report=term-missing",
]
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["claw_mem"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
